; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_mISDNipac.c_ph_command.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_mISDNipac.c_ph_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isac_hw = type { i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"%s: ph_command %x\0A\00", align 1
@IPAC_TYPE_ISACX = common dso_local global i32 0, align 4
@ISACX_CIX0 = common dso_local global i32 0, align 4
@ISAC_CIX0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isac_hw*, i32)* @ph_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ph_command(%struct.isac_hw* %0, i32 %1) #0 {
  %3 = alloca %struct.isac_hw*, align 8
  %4 = alloca i32, align 4
  store %struct.isac_hw* %0, %struct.isac_hw** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.isac_hw*, %struct.isac_hw** %3, align 8
  %6 = getelementptr inbounds %struct.isac_hw, %struct.isac_hw* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @pr_debug(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %8)
  %10 = load %struct.isac_hw*, %struct.isac_hw** %3, align 8
  %11 = getelementptr inbounds %struct.isac_hw, %struct.isac_hw* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @IPAC_TYPE_ISACX, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %2
  %17 = load %struct.isac_hw*, %struct.isac_hw** %3, align 8
  %18 = load i32, i32* @ISACX_CIX0, align 4
  %19 = load i32, i32* %4, align 4
  %20 = shl i32 %19, 4
  %21 = or i32 %20, 14
  %22 = call i32 @WriteISAC(%struct.isac_hw* %17, i32 %18, i32 %21)
  br label %30

23:                                               ; preds = %2
  %24 = load %struct.isac_hw*, %struct.isac_hw** %3, align 8
  %25 = load i32, i32* @ISAC_CIX0, align 4
  %26 = load i32, i32* %4, align 4
  %27 = shl i32 %26, 2
  %28 = or i32 %27, 3
  %29 = call i32 @WriteISAC(%struct.isac_hw* %24, i32 %25, i32 %28)
  br label %30

30:                                               ; preds = %23, %16
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i32 @WriteISAC(%struct.isac_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
